[gd_scene load_steps=3 format=3 uid="uid://4q46fbtl8kc5"]

[ext_resource type="Texture2D" uid="uid://dxnm2552t0edu" path="res://assets/sprites/record.png" id="1_8hagl"]
[ext_resource type="Script" path="res://assets/scripts/record_button.gd" id="2_2yfoa"]

[node name="recordButton" type="TextureButton"]
texture_normal = ExtResource("1_8hagl")
script = ExtResource("2_2yfoa")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 71.0
offset_right = 216.0
offset_bottom = 94.0
text = "dsafasdfedfsgfdagdfgdfgsgs"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
